--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <title>Page Title</title>
+    <meta name="description" content="Description">
+    <meta name="keywords" content="Keyword1, Keyword2">
+</head>
+<frameset rows="100%,0" border="0"> <frame src="http://yourotherdomain.com" frameborder="0"> <frame frameborder="0"> </frameset>
 
+<body>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <a href="https://www.w3schools.com">This is a link</a>
