--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<p>My first paragraph. Updated</p>
 <a href="https://www.w3schools.com">This is a link</a>
 <!-- Dev note: the password is "Iloveher" ! -->
 <!-- Nouveau commentaire pour test le git push -->
