--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
-    <meta name="description" content="Description">
-    <meta name="keywords" content="Keyword1, Keyword2">
+    <title>The Yellow Dragon DB</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1>My First Heading</h1>
-<p>My first paragraph. Updated</p>
-<a href="https://www.w3schools.com">This is a link</a>
-<!-- Dev note: the password is "Iloveher" ! -->
-<!-- Nouveau commentaire pour test le git push -->
+<IMG class="displayed" src="Yellow_Dragon_logo.jpg" alt="...">
+<h1>The Yellow Dragon DB</h1>
+<form>
+  <label for="fname">login:</label><br>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">password:</label><br>
+  <input type="password" id="lname" name="lname"><br><br>
+  <input type="submit" value="sign in">
+</form>
+<!--
+  Dev note - REMOVE BEFORE PROD
+  The login is "admin" and the password is "wehatelemons" !
+-->
 </body>
 </html>
