--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<IMG class="displayed" src="Yellow_Dragon_logo.jpg" alt="...">
+<IMG class="displayed" src="Yellow_Dragon_logo.png" alt="...">
 <h1>The Yellow Dragon DB</h1>
 <script>
     var checkLoginPass = function () {
