--- a/otherpage.html
+++ b/otherpage.html
@@ -2,40 +2,12 @@
 <html>
 <head>
     <title>The Yellow Dragon DB</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<IMG class="displayed" src="Yellow_Dragon_logo.jpg" alt="...">
-<h1>THIS IS A WHOLE OTHER PAGE</h1>
-<form>
-  <label for="name">login:</label><br>
-  <input type="text" id="name" name="name"><br><br>
-  <label for="password">password:</label><br>
-  <input type="password" id="password" name="password"><br><br>
-  <input type="submit" value="sign in" onclick="checkLoginPass()">
-    <script>
-        var checkLoginPass = function () {
-            console.log("HEY !!!")
-            var login = document.getElementById("name").value;
-            var pass = document.getElementById("password").value;
-            console.log(pass)
-            if (login === "admin" && pass === "wehatelemons") {
-              console.log("HEY !!!")
-              console.log("HEY !!!")
-              console.log("HEY !!!")
-              console.log("HEY !!!")
-                window.location.href("https://www.quora.com/How-would-one-hide-text-inside-text?share=1");
-            }
-            else {
-                //do something else;
-            }
-        }
-    </script>
-</form>
-<!--
-  Dev note - REMOVE BEFORE PROD
-  The login is "admin" and the password is "wehatelemons" !
--->
+<p>- files of the main database -</p>
+<a href="https://youtu.be/dQw4w9WgXcQ">Embarassing picture of the boss.jpg</a>
+<a href="https://thumbs.dreamstime.com/b/cropped-view-young-guy-holding-his-cute-golden-retriever-leash-ready-walk-home-copy-space-unrecognizable-millennial-233611944.jpg">Answers of the exam</a>
+
 </body>
 </html>
