--- a/otherpage.html
+++ b/otherpage.html
@@ -6,8 +6,8 @@
 
 <body>
 <p>- files of the main database -</p>
-<a href="https://youtu.be/dQw4w9WgXcQ">Embarassing picture of the boss.jpg</a>
-<a href="https://thumbs.dreamstime.com/b/cropped-view-young-guy-holding-his-cute-golden-retriever-leash-ready-walk-home-copy-space-unrecognizable-millennial-233611944.jpg">Answers of the exam</a>
+<a href="https://youtu.be/dQw4w9WgXcQ">Embarassing picture of the boss.jpg</a><br>
+<a href="https://thumbs.dreamstime.com/b/cropped-view-young-guy-holding-his-cute-golden-retriever-leash-ready-walk-home-copy-space-unrecognizable-millennial-233611944.jpg">Answers of the exam.jpg</a><br>
 
 </body>
 </html>
